<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="俄罗斯方块"/>

    <!--画笔颜色-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/id_btn_design_patterns_command_pattern_tetris_left"
            style="@style/style_btn_width_match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/str_left"/>
        <Button
            android:id="@+id/id_btn_design_patterns_command_pattern_tetris_right"
            style="@style/style_btn_width_match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/str_right"/>

        <Button
            android:id="@+id/id_btn_design_patterns_command_pattern_tetris_fall"
            style="@style/style_btn_width_match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/str_fall"/>

        <Button
            android:id="@+id/id_btn_design_patterns_command_pattern_tetris_up"
            style="@style/style_btn_width_match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/str_transform"/>

    </LinearLayout>
</LinearLayout>